# abutils

./: .gitignore  .readthedocs.yaml  .travis.yml  CLAUDE.md  MANIFEST.in  README.md  REFACTOR.md  TECHNICAL_ANALYSIS.md  pyproject.toml  requirements.txt  requirements2.txt  setup.py
.github/workflows/: pytest.yml  pythonpublish.yml
abutils/: __init__.py  bin.py  cl.py  io.py  pl.py  pp.py  tl.py  version.py
abutils/binaries/: cdhit_darwin_amd64  fasttree_darwin_arm64  mafft_linux  minimap2_linux_amd64  vsearch_linux_amd64
abutils/binaries/mafft_darwin_amd64/mafftdir/libexec/: addsingle  countlen  (+12 more)
abutils/core/: lineage.py  pair.py  sequence.py
abutils/plots/: __init__.py  bar.py  base.py  data.py  donut.py  heatmap.py  kde.py  lineage.py  plots.py  ridge.py  ring.py  scatter.py  summary.py  utils.py
abutils/plots/mixins/: hue.py
abutils/plots/models/: data.py
abutils/preprocess/: __init__.py  preprocess.py
abutils/tenx/: __init__.py  batch_cellranger.py  features.py  io.py  pl.py  tl.py
abutils/tests/: test_alignment.py  test_clonify.py  test_cluster.py  test_color.py  test_pair.py  test_phylo.py  test_plots.py  test_preprocessing.py  test_sequence.py  test_utilities.py
abutils/tests/data/: PG9.json
abutils/tools/: alignment.py  anarci.py  clonify.py  cloning.py  cluster.py  log.py  phylo.py  preprocessing.py  search.py  similarity.py
abutils/tools/.ipynb_checkpoints/: phylo-checkpoint.py
abutils/utils/: __init__.py  alignment.py  circos.py  click.py  cluster.py  codons.py  color.py  convert.py  database.py  decorators.py  germlines.py  inputs.py  jobs.py  log.py  mongodb.py  path.py  phylogeny.py  pipeline.py  progbar.py  s3.py  seqio.py  ssh_tunnel.py  test_utilities.py  utilities.py
docs/: Makefile  doc_requirements.txt  make.bat
docs/source/: api.rst  conf.py  index.rst  installation.rst  license.rst  overview.rst
docs/source/_build/doctrees/: api.doctree  environment.pickle  index.doctree  installation.doctree  jobs.doctree  license.doctree  news.doctree  overview.doctree
docs/source/_build/html/: .buildinfo  api.html  genindex.html  index.html  installation.html  jobs.html  license.html  news.html  objects.inv  overview.html  py-modindex.html  search.html  searchindex.js
docs/source/models/: sequence.rst
docs/source/modules/: alignment_functions.rst  alignment_models.rst  cluster_functions.rst  cluster_models.rst  clustering.rst  color.rst  convert_sequences.rst  io.rst  io_utils.rst  jobs.rst  lineage.rst  multiple_sequence_alignment.rst  pair.rst  pairwise_alignment.rst  path.rst  phylogeny.rst  phylogeny_inference.rst  phylogeny_trees.rst  pipeline.rst  read_sequences.rst  sequence.rst  tutorials.rst  write_sequences.rst
docs/source/plots/: bar.rst  donut.rst  kde.rst  scatter.rst
docs/source/tools/: alignment.rst  clonify.rst  clustering.rst  multiple_sequence_alignment.rst  pairwise_alignment.rst  phylogeny.rst  preprocessing.rst  search.rst
src/abutils/: __init__.py  cl.py  io.py  log.py  pl.py  pp.py  tl.py
src/abutils/binaries/: minimap2_darwin_arm64  sickle_darwin_arm64  sickle_linux_amd64  vsearch_darwin_arm64
src/abutils/core/: __init__.py  lineage.py  pair.py  sequence.py
src/abutils/plots/: bar.py  base.py  data.py  donut.py  heatmap.py  kde.py  lineage.py  ridge.py  ring.py  scatter.py  summary.py
src/abutils/plots/mixins/: hue.py
src/abutils/plots/models/: data.py
src/abutils/tools/: alignment.py  anarci.py  clonify.py  cloning.py  cluster.py  log.py  msa.py  pairwise.py  phylo.py  preprocessing.py  search.py  similarity.py
src/abutils/utils/: click.py  codons.py  color.py  convert.py  database.py  decorators.py  germlines.py  jobs.py  utilities.py
src/abutils/utils/matrices/: match1mismatch0  match3mismatch2
tests/: conftest.py  test_alignment.py  test_bin.py  test_clonify.py  test_cloning.py  test_cluster.py  test_codons.py  test_color.py  test_decorators.py  test_edge_cases.py  test_io.py  test_lineage.py  test_pair.py  test_phylo.py  test_plots.py  test_preprocessing.py  test_sequence.py  test_similarity.py  test_utilities.py
tests/data/: PG9.fasta  bcr_sequences.tsv  tcr_sequences.tsv
(+49 files in other folders)
